--- a/style.css
+++ b/style.css
@@ -69,11 +69,16 @@ p {
 img {
 display: flex;
 justify-content: left;
+border-radius: 15px;
+}
+
+.box img {
+    border-radius: 19px;
 }
 
 button {
     background-color: rgb(255, 123, 0);
-    color: #F9FAF8;
+    color: #333333; /* Gris oscuro */    
     border: 2mm ridge rgba(236, 143, 36, 0.753);
     border-radius: 15px;
     font-size: 24px;
@@ -81,6 +86,33 @@ button {
     width: 150px;
 }
 
+.information h1 {
+font-size: 36px;
+color: #1F2937;
+font-weight: 900px;
+}
+
+.information p {
+    color: black;
+}
+
+.information {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: orange;
+}
+
+.boxes {
+    display: flex; 
+    text-align: center;
+    justify-content: space-around;
+    gap: 24px;
+}
+
+.box {
+    width: 250px;
+}
 
 
 
