--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header {
     position: sticky;
     background: url(images/1349325.png) fixed;
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     top: 0px;
     padding-top: 24px;
     padding-bottom: 24px;
@@ -90,10 +90,11 @@ button {
     background-color: rgb(255, 123, 0);
     color: #333333; /* Gris oscuro */    
     border: 2mm ridge rgba(236, 143, 36, 0.753);
+    font-weight: 700;
     border-radius: 15px;
-    font-size: 24px;
+    font-size: 18px;
     padding: 10px;
-    width: 150px;
+    width: 160px;
 }
 
 .information h1 {
@@ -110,23 +111,23 @@ z-index: 9999;
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 100%;
 }
 
 .prueba {
     background: url(./images/yerba.png);
     filter: blur(3px);
+    margin-top: 175px;
+    height: 100%;
     width: 100%;
     height: 100%;
     z-index: 0;
-    left: 0;
-    right: 0;
-    background-size: cover;
-    background-repeat: no-repeat;
+    position: absolute;
+    background-size: none;
+    background-repeat: repeat;
 }
 
 .boxes {
-    left: 0;
-    right: 0;
     z-index: 9999;
     display: flex; 
     text-align: center;
@@ -148,10 +149,22 @@ color: transparent;
 
 .box img {
     margin-bottom: 6px;
+    transition: ease 0.2s;
 }
 
 .box img:hover {
 transform: scale(1.05);
+}
+
+.box p {
+    margin-bottom: 16px;
+}
+
+.quote {
+    background: url(images/1349325.png) fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 9999;
 }
 
 .quote h1 {
